[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Muthuramalingam and this is my first webapp.
+            Hi! I am Muthuramalingam and this is my first web application.
             <h4> A new heading</h4>
             I have made some new local changes.
         </div>
